Initial commit: Complete printing website with modern UI and animations

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Printec - Quality Custom Printing",
-  "short_name": "Printec",
+  "name": "Shristi Press - Quality Custom Printing",
+  "short_name": "Shristi Press",
   "description": "The leader in quality custom printing services",
   "start_url": "/",
   "display": "standalone",
